--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "294-aws-s3": "^1.2.12",
     "chokidar": "^3.5.3",
     "js-yaml": "^4.1.0",
+    "marked": "^4.0.16",
     "mime-types": "^2.1.35"
   }
 }
